--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,10 @@ p, h1, h2, h3, h4, h5, h6 {
     padding-bottom: 120px;
 }
 
+.made-container {
+    border-top: none;
+}
+
 .made-title {
     min-width: 218px;
     margin: 0 auto;
